0023123: Bug/Regression in visualization of XDE documents in shaded mode

Added new group creation before adding styled item in XCAFPrs_AISObject::Compute